// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SearchShortcut should match snapshot on Mac desktop 1`] = `
<div>
  <span
    class="search-shortcut"
  >
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      ⌘
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      F
    </mark>
  </span>
</div>
`;

exports[`components/SearchShortcut should match snapshot on Mac webapp 1`] = `
<div>
  <span
    class="search-shortcut"
  >
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      ⌘
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      Shift
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      F
    </mark>
  </span>
</div>
`;

exports[`components/SearchShortcut should match snapshot on Windows desktop 1`] = `
<div>
  <span
    class="search-shortcut"
  >
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      Ctrl
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      F
    </mark>
  </span>
</div>
`;

exports[`components/SearchShortcut should match snapshot on Windows webapp 1`] = `
<div>
  <span
    class="search-shortcut"
  >
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      Ctrl
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      Shift
    </mark>
    <mark
      class="shortcut-key shortcut-key--contrast"
    >
      F
    </mark>
  </span>
</div>
`;
